# yew-vite-starter

./: .gitignore  build.bat  c.bat  dev.bat
vite-app/: i.bat  package.json  tsconfig.json  vite.config.ts
vite-app/src/root/: index.html  index.ts
yew-app/: Cargo.toml
yew-app/src/: lib.rs
yew-app/src/app/: _component_template.rs  mod.rs  router.rs
yew-app/src/app/components/: mod.rs
yew-app/src/app/pages/: index.rs  mod.rs  not_found.rs
yew-app/src/utils/: logger.rs  mod.rs
