[package]
name = "yew-app"
description = "Yew part of main project"
version = "0.1.0"
edition = "2021"
license = "LICENSE"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.17"
wasm-bindgen = "0.2.81"
wasm-logger = "0.2.0" 
wee_alloc = "0.4.5"
yew = "0.19.3"
yew-router = "0.16.0"

[dependencies.web-sys]
version = "0.3.58"
# We need to enable all the web-sys features we want to use!
features = [
    "Document",
    "Element",
    "Node",
    "HtmlElement",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
